v0.2.6 - 2012-07-08
- Uses Vault for permissions handling

v0.2.5 - 2011-02-01
- New configuration system to support R6
- Prettier default yml file

v0.2.4 - 2011-02-01
- Spawning always uses spawn method directly; apparently Bukkit now has spawnCreature calling spawn, but occasionally throws an NPE when it tries to call it
- Fixes snowmen, giants, possibly others not spawning due to above issue
- Default config updates

v0.2.3 - 2011-12-04
- Entities take priority over players; e.g. typing /spawn spider won't teleport a player named Spider123 to your location.

v0.2.2 - 2011-11-01
- Command handling:  I always thought that /spawn should be used to, you know, SPAWN something :) but apparently
some plugins use /spawn to teleport players back to the original starting location of the current world.
The plugin now therefore only explicitly reserves /ent and /ent-admin.  /spawn, /sp, /s, /spawn-entity are now
considered aliases, and will not direct to this plugin unless nothing else registers them as commands, in which
case they will work as normal
- Fixed permissions mistake with spawn-admin command

v0.2.1 - 2011-10-24
- Config file:  renamed spawn to settings to avoid confusion with similarly named subsections
- Config file:  use-permissions defaults to false to avoid exceptions when running without perms we can recognize.
I want this plugin to run "out of the box" without tweaking in as many circumstances as possible
- spawnLimit now counts every passenger instead of treating the whole combo as one unit 

v0.2 - 2011-10-22
- Made it possible to spawn Items
- Redid configuration file, made it use lists
- Randomized direction entity faces when spawned (not the same as velocity)
- Allow for the inclusion of default parameters in alias (e.g. supercreeper could be creeper/a)

v0.1 - 2011-10-10
- Initial release